# GribApi.NET

./: .gitignore  CHANGELOG  LICENSE  README.md  RawFileBadETOGrib.octet-stream
doc/: TypicalKeyDump.md
docs/: KeyConcepts.md
ext/grib_api/: .cproject  .gitignore  CMakeLists.txt  NOTICE  README  VERSION.cmake  configure.ac  grib_api_config.h.in  (+3 more)
ext/grib_api-1.14.0-Source/: .project  Makefile.am  version.sh
ext/grib_api/cmake/contrib/GreatCMakeCookOff/tests/: CMakeLists.txt  addgtest.cmake  checkcpp11flags.cmake  checkisnan.cmake
ext/grib_api/definitions/: CMakeLists.txt  Makefile.am  boot.def  installDefinitions.sh
ext/grib_api/definitions/budg/: section.1.def  section.4.def
ext/grib_api/definitions/grib1/: boot.def  grid_definition_1.def  grid_definition_10.def  grid_definition_14.def  grid_definition_192.98.def  grid_definition_193.98.def  grid_definition_20.def  grid_definition_24.def  grid_definition_30.def  grid_definition_34.def  grid_definition_5.def  grid_definition_60.def  grid_definition_70.def  grid_definition_80.def  grid_definition_90.def  grid_definition_gaussian.def  grid_definition_lambert.def  grid_definition_latlon.def  grid_first_last_resandcomp.def  local.46.def  mars_labeling.def  section.1.def  section.2.def  section.3.def  section.4.def
ext/grib_api/definitions/grib1/localConcepts/ecmf/: units.def
ext/grib_api/definitions/grib1/localConcepts/eswi/: cfName.def
ext/grib_api/definitions/grib2/: boot.def  boot_multifield.def  parameters.def  products_6.def  products_7.def  section.0.def  section.1.def  section.2.def  section.3.def  section.4.def  section.5.def  section.6.def  section.7.def  template.1.0.def  template.1.1.def  template.1.2.def  template.3.0.def  template.3.1.def  template.3.10.def  template.3.1000.def  template.3.110.def  template.3.1100.def  template.3.12.def  template.3.120.def  template.3.130.def  template.3.140.def  template.3.2.def  template.3.20.def  template.3.3.def  template.3.30.def  template.3.31.def  template.3.4.def  template.3.40.def  template.3.41.def  template.3.42.def  template.3.43.def  template.3.5.def  template.3.50.def  template.3.51.def  template.3.52.def  (+68 more)
ext/grib_api/definitions/grib2/localConcepts/ecmf/: cfVarName.def  name.def
ext/grib_api/definitions/grib2/tables/15/: 4.240.table
ext/grib_api/definitions/mars/: class.table
ext/grib_api/definitions/tide/: section.1.def  section.4.def
ext/grib_api/samples/: CMakeLists.txt
nuget.package/: Grib.Api.nuspec
(+1203 files in other folders)
